--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<title>Laura Breslin</title>
 
 	<link rel="stylesheet" href="style.css">
-	<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	<script src="myjquery.js"></script>
 </head>
